--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <p>
         $$STATUS$$
     </p>
+
+    <form action="/init" method="get">
+        <input type="submit" id="bt_InitGame"  class="Button_Main" value="Init Game">
+    </form>
+
+    <form action="/PrepareNextShift" method="get">
+        <input type="submit" id="bt_PrepareNextShift"  class="Button_Main" value="Next Shift">
+    </form>
     
 </body>
 </html>
