--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <h1>
         Bicycle Messenger Simulation Game
     </h1>
+
     <p>
         $$STATUS$$
+    </p>
+    <br>
+    <p>
+        $$VARSTATS$$
     </p>
 
     <form action="/init" method="get">
