--- a/assignment.html
+++ b/assignment.html
@@ -6,6 +6,10 @@
     <title>Assignment</title>
 </head>
 <body>
+    <header>
+        <a href="/" id="link">Back to main</a>
+    </header>
+
     <h1>Assign the orders to the riders</h1>
     <h2>Available riders:</h2>
     <p id="AvailRider">
