--- a/ShowRiders.html
+++ b/ShowRiders.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Various Figures of Last Shift</title>
+    <title>Overview Riders</title>
 </head>
 <body>
     <header>
-        <a href="/" id="link">Back to main</a> <a href="/ShowRiders" id="link">Show Riders</a>
+        <a href="/" id="link">Back to main</a> 
     </header>
 
-    <p>
-        $$SHIFTSTATS$$
+    <p id="rider_block">
+        $$SHOWRIDERS$$
     </p>
-
+    
 </body>
 </html>
