--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         $$CASHACCOUNT$$
     </p>
 
+    <a href="/ShowRiders" id="link">Show Riders</a>
+
     <form action="/init" method="get">
         <input type="submit" id="bt_InitGame"  class="Button_Main" value="Init Game">
     </form>
@@ -29,7 +31,7 @@
     <form action="/ShowStats" method="get">
         <input type="submit" id="bt_ShowStats"  class="Button_Main" value="Show Stats Last Shift">
     </form>
-
+    
     <form action="/PrepareNextShift" method="get">
         <input type="submit" id="bt_PrepareNextShift"  class="Button_Main" value="Next Shift">
     </form>
