--- a/assignment.html
+++ b/assignment.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <header>
-        <a href="/" id="link">Back to main</a>
+        <a href="/" id="link">Back to main</a> 
+        <a href="/ShowRiders" id="link">Show Riders</a>
     </header>
 
     <h1>Assign the orders to the riders</h1>
