ShowMap.html neu

--- a/assignment.html
+++ b/assignment.html
@@ -8,8 +8,11 @@
 <body>
     <header>
         <a href="/" id="link">Back to main</a> 
-        <a href="/ShowRiders" id="link">Show Riders</a>
     </header>
+
+    <form action="/ShowRiders" method="get">
+        <input type="submit" id="bt_ShowRiders"  class="Button_Main" value="Show Riders">
+    </form>
 
     <h1>Assign the orders to the riders</h1>
     <h2>Available riders:</h2>
