--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
         $$CASHACCOUNT$$
     </p>
 
-    <a href="/ShowRiders" id="link">Show Riders</a>
-
     <form action="/init" method="get">
         <input type="submit" id="bt_InitGame"  class="Button_Main" value="Init Game">
+    </form>
+
+    <form action="/ShowRiders" method="get">
+        <input type="submit" id="bt_ShowRiders"  class="Button_Main" value="Show Riders">
+    </form>
+
+    <form action="/ShowMap" method="get">
+        <input type="submit" id="bt_ShowMap"  class="Button_Main" value="Show Map">
     </form>
 
     <form action="/ShowStats" method="get">
