--- a/ShowMap.html
+++ b/ShowMap.html
@@ -15,10 +15,12 @@
     </h1>
 
     <p id="map">
+        <h2>Distances [km]</h2>
         $$DISTANCES$$
     </p>
 
     <p id="altitude">
+        <h2>Diff. Altitudes [m]</h2>
         $$ALTITUDES$$
     </p>
     
