Implement Subfunctions: WIP

--- a/ShowStats.html
+++ b/ShowStats.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="/" id="link">Back to main</a> <a href="/ShowRiders" id="link">Show Riders</a>
+        <a href="/" id="link">Back to main</a> 
     </header>
 
     <p>
