--- a/assignment.html
+++ b/assignment.html
@@ -15,6 +15,11 @@
     </form>
 
     <h1>Assign the orders to the riders</h1>
+
+    <p id="status_assignment">
+        $$STATUS_ASSIGNMENT$$
+    </p>
+
     <h2>Available riders:</h2>
     <p id="AvailRider">
         $$AVAILABLERIDERS$$
