--- a/ShowStats.html
+++ b/ShowStats.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Various Figures of Last Shift</title>
+    <link rel="stylesheet" href="static/style_main.css">
 </head>
 <body>
     <header>
         <a href="/" id="link">Back to main</a> 
     </header>
 
-    <p>
+    <p id="ShowStats">
         $$SHIFTSTATS$$
     </p>
 
