--- a/assignment.html
+++ b/assignment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
+    <link rel="stylesheet" href="static/style_main.css">
 </head>
 <body>
     <header>
@@ -36,6 +37,18 @@
         $$ASSIGNMENT$$
         <input type="submit" class="Button_Main" id="bt_applyAssignments" value="Apply Assignment">
     </form>
+
+    <hr>
+    <p>
+        <h2>How to assign</h2>
+
+        <p>
+            To assign an order to a rider you have to enter the order number into the field next to the rider. If you want to assign more than one order to a rider
+            you can do so by separating the orders by a semicolon (;). Be aware that you define the chronological order of the execution. <br>
+            If you dont want to assing any order to a rider, jsut enter 0. <br>
+            You do not have to assign every order, but can't assing a specific order to more than one rider.
+        </p>
+    </p>
 
 </body>
 </html>
