--- a/ShowRiders.html
+++ b/ShowRiders.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overview Riders</title>
+    <link rel="stylesheet" href="static/style_main.css">
 </head>
 <body>
     <header>
