--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="group">
-    <form action="/ShowRiders" method="get">
+    <form action="/ShowRiders" method="get" target="_blank">
         <input type="submit" id="bt_ShowRiders"  class="Button_Main" value="Show Riders">
         <p class="group_text">
             Show all riders
@@ -50,7 +50,7 @@
     </div>
 
     <div class="group">
-    <form action="/ShowMap" method="get">
+    <form action="/ShowMap" method="get" target="_blank">
         <input type="submit" id="bt_ShowMap"  class="Button_Main" value="Show Map">
         <p class="group_text">
             Show the current map
